ffigen/LabSoundHelper.h

typedef struct AudioStreamConfig {
    int32_t device_index;
    uint32_t desired_channels;
    float desired_samplerate;
} AudioStreamConfig;
// returns the greatest sample index played back by any of the scheduled
// instances in the most recent render quantum. A value less than zero
// indicates nothing's playing.
int SampledAudioNode_getCursor(int index);
int SampledAudioNode_playbackRate(int index);
int SampledAudioNode_detune(int index);
////////////////
/// AudioBus ///
////////////////

int makeBusFromFile(const char *file, int mixToMono, float targetSampleRate);
int makeBusFromMemory(const uint8_t* buffer, const int bufferLen, const char *extension, int mixToMono);
int audioBusHasCheck(int busId);
// Channels
int AudioBus_numberOfChannels(int busIndex);
// Number of sample-frames
int AudioBus_length(int busIndex);
// Sample-rate : 0.0 if unknown or "don't care"
float AudioBus_sampleRate(int busIndex);
void AudioBus_setSampleRate(int busIndex, float sampleRate);
// Zeroes all channels.
void AudioBus_zero(int busIndex);
// Clears the silent flag on all channels.
void AudioBus_clearSilentFlag(int busIndex);
// Scales all samples by the same amount.
void AudioBus_scale(int busIndex, float scale);
// for de-zippering
void AudioBus_reset(int busIndex);
// Returns true if the silent bit is set on all channels.
int AudioBus_isSilent(int busIndex);
int AudioBus_isFirstTime(int busIndex);
void releaseAudioBus(int index);
////////////////
/// GainNode ///
////////////////

int createGain(AudioContext* context);
int GainNode_gain(int nodeId);
////////////////////
/// RecorderNode ///
////////////////////

// create a recorder with a specific configuration
int createRecorderNode(AudioContext* context, int channelCount);
int createRecorderNodeByConfig(AudioContext* context, AudioStreamConfig outputConfig );
void RecorderNode_startRecording(int nodeId);
void RecorderNode_stopRecording(int nodeId);
float RecorderNode_recordedLengthInSeconds(int nodeId);
// create a bus from the recording; it can be used by other nodes
// such as a SampledAudioNode.
int RecorderNode_createBusFromRecording(int nodeId, int mixToMono);
// returns true for success
int RecorderNode_writeRecordingToWav(int nodeId, char *file, int mixToMono);
////////////////////
/// AnalyserNode ///
////////////////////

int createAnalyserNode(AudioContext* context);
int createAnalyserNodeFftSize(AudioContext* context, int fftSize);