lib/src/generated_bindings.dart


  late final _SampledAudioNode_getCursor_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_getCursor>>(
          'SampledAudioNode_getCursor');
  late final _dart_SampledAudioNode_getCursor _SampledAudioNode_getCursor =
      _SampledAudioNode_getCursor_ptr.asFunction<
          _dart_SampledAudioNode_getCursor>();

  int SampledAudioNode_playbackRate(
    int index,
  ) {
    return _SampledAudioNode_playbackRate(
      index,
    );
  }

  late final _SampledAudioNode_playbackRate_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_playbackRate>>(
          'SampledAudioNode_playbackRate');
  late final _dart_SampledAudioNode_playbackRate
      _SampledAudioNode_playbackRate = _SampledAudioNode_playbackRate_ptr
          .asFunction<_dart_SampledAudioNode_playbackRate>();

  int SampledAudioNode_detune(
    int index,
  ) {
    return _SampledAudioNode_detune(
      index,
    );
  }

  late final _SampledAudioNode_detune_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_detune>>(
          'SampledAudioNode_detune');
  late final _dart_SampledAudioNode_detune _SampledAudioNode_detune =
      _SampledAudioNode_detune_ptr.asFunction<_dart_SampledAudioNode_detune>();

  /// /////////////
  /// AudioBus ///
  /// /////////////
  int makeBusFromFile(
    ffi.Pointer<ffi.Int8> file,
    int mixToMono,
    double targetSampleRate,
  ) {
    return _makeBusFromFile(
      file,
      mixToMono,
      targetSampleRate,
    );
  }

  late final _makeBusFromFile_ptr =
      _lookup<ffi.NativeFunction<_c_makeBusFromFile>>('makeBusFromFile');
  late final _dart_makeBusFromFile _makeBusFromFile =
      _makeBusFromFile_ptr.asFunction<_dart_makeBusFromFile>();

  int makeBusFromMemory(
    ffi.Pointer<ffi.Uint8> buffer,
    int bufferLen,
    ffi.Pointer<ffi.Int8> extension_1,
    int mixToMono,
  ) {
    return _makeBusFromMemory(
      buffer,
      bufferLen,
      extension_1,
      mixToMono,
    );
  }

  late final _makeBusFromMemory_ptr =
      _lookup<ffi.NativeFunction<_c_makeBusFromMemory>>('makeBusFromMemory');
  late final _dart_makeBusFromMemory _makeBusFromMemory =
      _makeBusFromMemory_ptr.asFunction<_dart_makeBusFromMemory>();

  int audioBusHasCheck(
    int busId,
  ) {
    return _audioBusHasCheck(
      busId,
    );
  }

  late final _audioBusHasCheck_ptr =
      _lookup<ffi.NativeFunction<_c_audioBusHasCheck>>('audioBusHasCheck');
  late final _dart_audioBusHasCheck _audioBusHasCheck =
      _audioBusHasCheck_ptr.asFunction<_dart_audioBusHasCheck>();

  int AudioBus_numberOfChannels(
    int busIndex,
  ) {
    return _AudioBus_numberOfChannels(
      busIndex,
    );
  }

  late final _AudioBus_numberOfChannels_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_numberOfChannels>>(
          'AudioBus_numberOfChannels');
  late final _dart_AudioBus_numberOfChannels _AudioBus_numberOfChannels =
      _AudioBus_numberOfChannels_ptr.asFunction<
          _dart_AudioBus_numberOfChannels>();

  int AudioBus_length(
    int busIndex,
  ) {
    return _AudioBus_length(
      busIndex,
    );
  }

  late final _AudioBus_length_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_length>>('AudioBus_length');
  late final _dart_AudioBus_length _AudioBus_length =
      _AudioBus_length_ptr.asFunction<_dart_AudioBus_length>();

  double AudioBus_sampleRate(
    int busIndex,
  ) {
    return _AudioBus_sampleRate(
      busIndex,
    );
  }

  late final _AudioBus_sampleRate_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_sampleRate>>(
          'AudioBus_sampleRate');
  late final _dart_AudioBus_sampleRate _AudioBus_sampleRate =
      _AudioBus_sampleRate_ptr.asFunction<_dart_AudioBus_sampleRate>();

  void AudioBus_setSampleRate(
    int busIndex,
    double sampleRate,
  ) {
    return _AudioBus_setSampleRate(
      busIndex,
      sampleRate,
    );
  }

  late final _AudioBus_setSampleRate_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_setSampleRate>>(
          'AudioBus_setSampleRate');
  late final _dart_AudioBus_setSampleRate _AudioBus_setSampleRate =
      _AudioBus_setSampleRate_ptr.asFunction<_dart_AudioBus_setSampleRate>();

  void AudioBus_zero(
    int busIndex,
  ) {
    return _AudioBus_zero(
      busIndex,
    );
  }

  late final _AudioBus_zero_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_zero>>('AudioBus_zero');
  late final _dart_AudioBus_zero _AudioBus_zero =
      _AudioBus_zero_ptr.asFunction<_dart_AudioBus_zero>();

  void AudioBus_clearSilentFlag(
    int busIndex,
  ) {
    return _AudioBus_clearSilentFlag(
      busIndex,
    );
  }

  late final _AudioBus_clearSilentFlag_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_clearSilentFlag>>(
          'AudioBus_clearSilentFlag');
  late final _dart_AudioBus_clearSilentFlag _AudioBus_clearSilentFlag =
      _AudioBus_clearSilentFlag_ptr.asFunction<
          _dart_AudioBus_clearSilentFlag>();

  void AudioBus_scale(
    int busIndex,
    double scale,
  ) {
    return _AudioBus_scale(
      busIndex,
      scale,
    );
  }

  late final _AudioBus_scale_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_scale>>('AudioBus_scale');
  late final _dart_AudioBus_scale _AudioBus_scale =
      _AudioBus_scale_ptr.asFunction<_dart_AudioBus_scale>();

  void AudioBus_reset(
    int busIndex,
  ) {
    return _AudioBus_reset(
      busIndex,
    );
  }

  late final _AudioBus_reset_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_reset>>('AudioBus_reset');
  late final _dart_AudioBus_reset _AudioBus_reset =
      _AudioBus_reset_ptr.asFunction<_dart_AudioBus_reset>();

  int AudioBus_isSilent(
    int busIndex,
  ) {
    return _AudioBus_isSilent(
      busIndex,
    );
  }

  late final _AudioBus_isSilent_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_isSilent>>('AudioBus_isSilent');
  late final _dart_AudioBus_isSilent _AudioBus_isSilent =
      _AudioBus_isSilent_ptr.asFunction<_dart_AudioBus_isSilent>();

  int AudioBus_isFirstTime(
    int busIndex,
  ) {
    return _AudioBus_isFirstTime(
      busIndex,
    );
  }

  late final _AudioBus_isFirstTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_isFirstTime>>(
          'AudioBus_isFirstTime');
  late final _dart_AudioBus_isFirstTime _AudioBus_isFirstTime =
      _AudioBus_isFirstTime_ptr.asFunction<_dart_AudioBus_isFirstTime>();

  void releaseAudioBus(
    int index,
  ) {
    return _releaseAudioBus(
      index,
    );
  }

  late final _releaseAudioBus_ptr =
      _lookup<ffi.NativeFunction<_c_releaseAudioBus>>('releaseAudioBus');
  late final _dart_releaseAudioBus _releaseAudioBus =
      _releaseAudioBus_ptr.asFunction<_dart_releaseAudioBus>();

  /// /////////////
  /// GainNode ///
  /// /////////////
  int createGain(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createGain(
      context,
    );
  }

  late final _createGain_ptr =
      _lookup<ffi.NativeFunction<_c_createGain>>('createGain');
  late final _dart_createGain _createGain =
      _createGain_ptr.asFunction<_dart_createGain>();

  int GainNode_gain(
    int nodeId,
  ) {
    return _GainNode_gain(
      nodeId,
    );
  }

  late final _GainNode_gain_ptr =
      _lookup<ffi.NativeFunction<_c_GainNode_gain>>('GainNode_gain');
  late final _dart_GainNode_gain _GainNode_gain =
      _GainNode_gain_ptr.asFunction<_dart_GainNode_gain>();

  /// /////////////////
  /// RecorderNode ///
  /// /////////////////
  int createRecorderNode(
    ffi.Pointer<ffi.Void> context,
    int channelCount,
  ) {
    return _createRecorderNode(
      context,
      channelCount,
    );
  }

  late final _createRecorderNode_ptr =
      _lookup<ffi.NativeFunction<_c_createRecorderNode>>('createRecorderNode');
  late final _dart_createRecorderNode _createRecorderNode =
      _createRecorderNode_ptr.asFunction<_dart_createRecorderNode>();

  int createRecorderNodeByConfig(
    ffi.Pointer<ffi.Void> context,
    AudioStreamConfig outputConfig,
  ) {
    return _createRecorderNodeByConfig(
      context,
      outputConfig,
    );
  }

  late final _createRecorderNodeByConfig_ptr =
      _lookup<ffi.NativeFunction<_c_createRecorderNodeByConfig>>(
          'createRecorderNodeByConfig');
  late final _dart_createRecorderNodeByConfig _createRecorderNodeByConfig =
      _createRecorderNodeByConfig_ptr
          .asFunction<_dart_createRecorderNodeByConfig>();

  void RecorderNode_startRecording(
    int nodeId,
  ) {
    return _RecorderNode_startRecording(
      nodeId,
    );
  }

  late final _RecorderNode_startRecording_ptr =
      _lookup<ffi.NativeFunction<_c_RecorderNode_startRecording>>(
          'RecorderNode_startRecording');
  late final _dart_RecorderNode_startRecording _RecorderNode_startRecording =
      _RecorderNode_startRecording_ptr.asFunction<
          _dart_RecorderNode_startRecording>();

  void RecorderNode_stopRecording(
    int nodeId,
  ) {
    return _RecorderNode_stopRecording(
      nodeId,
    );
  }

  late final _RecorderNode_stopRecording_ptr =
      _lookup<ffi.NativeFunction<_c_RecorderNode_stopRecording>>(
          'RecorderNode_stopRecording');
  late final _dart_RecorderNode_stopRecording _RecorderNode_stopRecording =
      _RecorderNode_stopRecording_ptr.asFunction<
          _dart_RecorderNode_stopRecording>();

  double RecorderNode_recordedLengthInSeconds(
    int nodeId,
  ) {
    return _RecorderNode_recordedLengthInSeconds(
      nodeId,
    );
  }

  late final _RecorderNode_recordedLengthInSeconds_ptr =
      _lookup<ffi.NativeFunction<_c_RecorderNode_recordedLengthInSeconds>>(
          'RecorderNode_recordedLengthInSeconds');
  late final _dart_RecorderNode_recordedLengthInSeconds
      _RecorderNode_recordedLengthInSeconds =
      _RecorderNode_recordedLengthInSeconds_ptr.asFunction<
          _dart_RecorderNode_recordedLengthInSeconds>();

  int RecorderNode_createBusFromRecording(
    int nodeId,
    int mixToMono,
  ) {
    return _RecorderNode_createBusFromRecording(
      nodeId,
      mixToMono,
    );
  }

  late final _RecorderNode_createBusFromRecording_ptr =
      _lookup<ffi.NativeFunction<_c_RecorderNode_createBusFromRecording>>(
          'RecorderNode_createBusFromRecording');
  late final _dart_RecorderNode_createBusFromRecording
      _RecorderNode_createBusFromRecording =
      _RecorderNode_createBusFromRecording_ptr.asFunction<
          _dart_RecorderNode_createBusFromRecording>();

  int RecorderNode_writeRecordingToWav(
    int nodeId,
    ffi.Pointer<ffi.Int8> file,
    int mixToMono,
  ) {
    return _RecorderNode_writeRecordingToWav(
      nodeId,
      file,
      mixToMono,
    );
  }

  late final _RecorderNode_writeRecordingToWav_ptr =
      _lookup<ffi.NativeFunction<_c_RecorderNode_writeRecordingToWav>>(
          'RecorderNode_writeRecordingToWav');
  late final _dart_RecorderNode_writeRecordingToWav
      _RecorderNode_writeRecordingToWav = _RecorderNode_writeRecordingToWav_ptr
          .asFunction<_dart_RecorderNode_writeRecordingToWav>();

  /// /////////////////
  /// AnalyserNode ///
  /// /////////////////
  int createAnalyserNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createAnalyserNode(
      context,
    );
  }

  late final _createAnalyserNode_ptr =
      _lookup<ffi.NativeFunction<_c_createAnalyserNode>>('createAnalyserNode');
  late final _dart_createAnalyserNode _createAnalyserNode =
      _createAnalyserNode_ptr.asFunction<_dart_createAnalyserNode>();

  int createAnalyserNodeFftSize(
    ffi.Pointer<ffi.Void> context,
    int fftSize,
  ) {
    return _createAnalyserNodeFftSize(
      context,
      fftSize,
    );
  }

  late final _createAnalyserNodeFftSize_ptr =
      _lookup<ffi.NativeFunction<_c_createAnalyserNodeFftSize>>(
          'createAnalyserNodeFftSize');
  late final _dart_createAnalyserNodeFftSize _createAnalyserNodeFftSize =
      _createAnalyserNodeFftSize_ptr
          .asFunction<_dart_createAnalyserNodeFftSize>();
